--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 <body>
     
+    <div id="app">
+        <h1 class="text-center m-3">{{title}}</h1>
+    </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
