--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     
     <div id="app">
         <h1 class="text-center m-3">{{title}}</h1>
+        <div class="d-flex justify-content-center">
+            <img :src="image" alt="">
+        </div>        
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
