--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     
     <div id="app">
-        <h1 class="text-center m-3">{{title}}</h1>
+        <h1 class="text-center m-3" :class="color" @click="changeColor()">{{title}}</h1>
         <div class="d-flex justify-content-center">
             <img :src="image" alt="">
         </div>        
